# testrepa

./: CMakeLists.txt  README.md  grozz.txt  main.cpp
src/: main.cpp
src/calc/: calc.cpp  calc.h
src/config/: config.h  config.h.in
